--- a/diag/admin/index.html
+++ b/diag/admin/index.html
@@ -7,17 +7,16 @@
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚡</text></svg>">
   
   <!-- Tabler Core CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/css/tabler.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css" />
 
   <!-- Your custom styles -->
   <link rel="stylesheet" href="css/admin.css">
 
   <!-- Charting Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
-<body class="theme-dark">
+<body>
   <div class="page">
     <!-- Sidebar -->
     <aside class="navbar navbar-vertical navbar-expand-lg" data-bs-theme="dark">
@@ -116,9 +115,14 @@
                         <i class="ti ti-clock icon-lg"></i>
                     </a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item me-3">
                     <a href="#" id="themeToggleBtn" class="nav-link px-0" title="Toggle Theme" data-bs-toggle="tooltip" data-bs-placement="bottom">
-                        <i class="ti ti-sun icon-lg"></i>
+                        <span class="nav-link-icon d-none d-md-inline-block">
+                           <i class="ti ti-moon"></i>
+                        </span>
+                        <span class="nav-link-icon d-md-none d-inline-block">
+                           <i class="ti ti-sun"></i>
+                        </span>
                     </a>
                 </div>
             </div>
@@ -148,15 +152,14 @@
   </div>
 
   <!-- Tabler Core JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/js/tabler.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/js/tabler.min.js" defer></script>
   
   <!-- Core Application Logic -->
   <!-- dataService must come first as other scripts depend on it -->
-  <script src="js/dataService.js" defer></script>
-  <script src="js/orgSwitcher.js"></script>
-  <script src="js/timeUtils.js"></script>
-  <!-- View-specific scripts will be loaded dynamically by app.js -->
-  <script src="js/app.js" type="module" defer></script>
-
-</body>
+  <script src="./js/dataService.js" defer></script>
+  <script type="module" src="./js/app.js"></script>
+  <script type="module" src="./js/orgSwitcher.js"></script>
+  <script src="./js/timeUtils.js"></script>
+  <script src="./js/themeSwitcher.js"></script>
+  </body>
 </html>
