--- a/diag/admin/index.html
+++ b/diag/admin/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="page">
     <!-- Sidebar -->
-    <aside class="navbar navbar-vertical navbar-expand-lg" data-bs-theme="dark">
+    <aside class="navbar navbar-vertical navbar-expand-lg">
       <div class="container-fluid">
         <h1 class="navbar-brand">
           <span class="navbar-brand-icon">🛡️</span>
@@ -117,12 +117,12 @@
                 </div>
                 <div class="nav-item me-3">
                     <a href="#" id="themeToggleBtn" class="nav-link px-0" title="Toggle Theme" data-bs-toggle="tooltip" data-bs-placement="bottom">
-                        <span class="nav-link-icon d-none d-md-inline-block">
-                           <i class="ti ti-moon"></i>
-                        </span>
-                        <span class="nav-link-icon d-md-none d-inline-block">
-                           <i class="ti ti-sun"></i>
-                        </span>
+                        <i class="ti ti-moon"></i>
+                    </a>
+                </div>
+                <div class="nav-item me-3">
+                     <a href="#" id="logoutBtn" class="nav-link px-0" title="Logout" data-bs-toggle="tooltip" data-bs-placement="bottom">
+                        <i class="ti ti-logout"></i>
                     </a>
                 </div>
             </div>
@@ -158,7 +158,6 @@
   <!-- dataService must come first as other scripts depend on it -->
   <script src="./js/dataService.js" defer></script>
   <script type="module" src="./js/app.js"></script>
-  <script type="module" src="./js/orgSwitcher.js"></script>
   <script src="./js/timeUtils.js"></script>
   <script src="./js/themeSwitcher.js"></script>
   </body>
