Fixed timeline toggle, and perf view along with other minor tweaks

--- a/diag/admin/index.html
+++ b/diag/admin/index.html
@@ -110,10 +110,11 @@
                         <i class="ti ti-help-circle icon-lg"></i>
                     </a>
                 </div>
-                <div class="nav-item me-3">
-                    <a href="#" id="timezoneToggle" class="nav-link px-0" title="Toggle Timezone" data-bs-toggle="tooltip" data-bs-placement="bottom">
-                        <i class="ti ti-clock icon-lg"></i>
-                    </a>
+                <div class="nav-item me-3 d-flex align-items-center">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="timezoneToggle">
+                        <label class="form-check-label" for="timezoneToggle">Local Time</label>
+                    </div>
                 </div>
                 <div class="nav-item me-3">
                     <a href="#" id="themeToggleBtn" class="nav-link px-0" title="Toggle Theme" data-bs-toggle="tooltip" data-bs-placement="bottom">
