--- a/diag/admin/index.html
+++ b/diag/admin/index.html
@@ -68,7 +68,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" data-view="security" tabindex="-1" aria-disabled="true">
+              <a class="nav-link" href="#" data-view="security">
                 <span class="nav-link-icon d-md-none d-lg-inline-block">
                   <i class="ti ti-shield-check"></i>
                 </span>
@@ -78,7 +78,7 @@
               </a>
             </li>
              <li class="nav-item">
-              <a class="nav-link disabled" href="#" data-view="reports" tabindex="-1" aria-disabled="true">
+              <a class="nav-link" href="#" data-view="reports">
                 <span class="nav-link-icon d-md-none d-lg-inline-block">
                   <i class="ti ti-file-analytics"></i>
                 </span>
@@ -156,10 +156,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/js/tabler.min.js" defer></script>
   
   <!-- Core Application Logic -->
-  <!-- dataService must come first as other scripts depend on it -->
-  <script src="./js/dataService.js" defer></script>
-  <script type="module" src="./js/app.js"></script>
   <script src="./js/timeUtils.js"></script>
   <script src="./js/themeSwitcher.js"></script>
+  <script src="./js/uiUtils.js"></script>
+  <script type="module" src="./js/app.js"></script>
   </body>
 </html>
