--- a/diag/admin/index.html
+++ b/diag/admin/index.html
@@ -159,6 +159,7 @@
   <script src="./js/timeUtils.js"></script>
   <script src="./js/themeSwitcher.js"></script>
   <script src="./js/uiUtils.js"></script>
+  <script src="./js/dataService.js"></script>
   <script type="module" src="./js/app.js"></script>
   </body>
 </html>
