--- a/diag/admin/index.html
+++ b/diag/admin/index.html
@@ -15,129 +15,134 @@
 
   <!-- Charting Libraries -->
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+  <!-- Initialize Global App Registry -->
+  <script>
+    window.viewInitializers = {};
+  </script>
 </head>
-<body>
+<body class="">
   <div class="page">
-    <!-- Sidebar -->
-    <aside class="navbar navbar-vertical navbar-expand-lg">
-      <div class="container-fluid">
-        <h1 class="navbar-brand">
-          <span class="navbar-brand-icon">🛡️</span>
-          <a href="." class="ms-2 navbar-brand-autodark text-decoration-none">MagenSec</a>
+    <!-- Navbar -->
+    <header class="navbar navbar-expand-md navbar-dark d-print-none">
+      <div class="container-xl">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
+          <span>🛡️</span>
+          <a href="." class="text-decoration-none"> MagenSec</a>
         </h1>
-        <div class="collapse navbar-collapse" id="sidebar-menu">
-          <ul class="navbar-nav pt-lg-3">
-            <li class="nav-item active">
-              <a class="nav-link" href="#" data-view="dashboard">
-                <span class="nav-link-icon d-md-none d-lg-inline-block">
-                  <i class="ti ti-home"></i>
-                </span>
-                <span class="nav-link-title">
-                  Command Center
-                </span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-view="applications">
-                <span class="nav-link-icon d-md-none d-lg-inline-block">
-                  <i class="ti ti-apps"></i>
-                </span>
-                <span class="nav-link-title">
-                  Applications
-                </span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-view="devices">
-                <span class="nav-link-icon d-md-none d-lg-inline-block">
-                  <i class="ti ti-devices"></i>
-                </span>
-                <span class="nav-link-title">
-                  Devices
-                </span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-view="performance">
-                <span class="nav-link-icon d-md-none d-lg-inline-block">
-                  <i class="ti ti-activity"></i>
-                </span>
-                <span class="nav-link-title">
-                  Performance
-                </span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-view="security">
-                <span class="nav-link-icon d-md-none d-lg-inline-block">
-                  <i class="ti ti-shield-check"></i>
-                </span>
-                <span class="nav-link-title">
-                  Security
-                </span>
-              </a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="#" data-view="reports">
-                <span class="nav-link-icon d-md-none d-lg-inline-block">
-                  <i class="ti ti-file-analytics"></i>
-                </span>
-                <span class="nav-link-title">
-                  Reports
-                </span>
-              </a>
-            </li>
-          </ul>
-           <div id="sidebar-footer" class="mt-auto">
-                <div id="expiryCounter" class="px-3"></div>
-           </div>
+        <div class="navbar-nav flex-row order-md-last">
+          <div class="d-none d-md-flex">
+            <div id="deviceFilterContainer" class="nav-item dropdown d-none d-md-flex me-3">
+              <!-- Device filter will be rendered here -->
+            </div>
+            <div id="orgSwitcherContainer" class="nav-item dropdown d-none d-md-flex me-3">
+              <!-- Org switcher will be rendered here -->
+            </div>
+          </div>
+          <div class="nav-item dropdown">
+            <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
+              <span id="user-avatar" class="avatar avatar-sm"></span>
+              <div class="d-none d-xl-block ps-2">
+                <div id="user-name">Guest</div>
+                <div id="user-role" class="mt-1 small text-muted">User</div>
+              </div>
+            </a>
+            <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+              <a href="#" class="dropdown-item">Profile</a>
+              <a href="#" class="dropdown-item">Settings</a>
+              <div class="dropdown-divider"></div>
+              <div class="dropdown-item">
+                <a href="#" id="theme-toggle-btn" class="nav-link px-0" title="Toggle theme">
+                    <i class="ti ti-moon me-2"></i> Theme
+                </a>
+              </div>
+               <div class="dropdown-item">
+                    <i class="ti ti-clock me-2"></i> Timezone: <span id="user-timezone"></span>
+               </div>
+              <div class="dropdown-divider"></div>
+              <a href="#" id="logoutButton" class="dropdown-item">Logout</a>
+            </div>
+          </div>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-menu">
+          <div class="d-flex flex-column flex-md-row flex-fill align-items-stretch align-items-md-center">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#" data-view="dashboard">
+                  <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="ti ti-home"></i>
+                  </span>
+                  <span class="nav-link-title">
+                    Command Center
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" data-view="applications">
+                  <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="ti ti-apps"></i>
+                  </span>
+                  <span class="nav-link-title">
+                    Applications
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" data-view="devices">
+                  <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="ti ti-devices"></i>
+                  </span>
+                  <span class="nav-link-title">
+                    Devices
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" data-view="performance">
+                  <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="ti ti-activity"></i>
+                  </span>
+                  <span class="nav-link-title">
+                    Performance
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" data-view="security">
+                  <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="ti ti-shield-check"></i>
+                  </span>
+                  <span class="nav-link-title">
+                    Security
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" data-view="reports">
+                  <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="ti ti-file-analytics"></i>
+                  </span>
+                  <span class="nav-link-title">
+                    Reports
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </aside>
-
-    <!-- Header -->
-    <header class="navbar navbar-expand-md d-print-none">
-        <div class="container-xl">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-menu" aria-controls="sidebar-menu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-nav flex-row ms-auto align-items-center order-md-last">
-                <div class="nav-item me-3">
-                    <div id="orgSwitcherContainer"></div>
-                </div>
-                <div class="nav-item me-3">
-                    <a href="help.html" target="_blank" class="nav-link px-0" title="Help & Documentation" data-bs-toggle="tooltip" data-bs-placement="bottom">
-                        <i class="ti ti-help-circle icon-lg"></i>
-                    </a>
-                </div>
-                <div class="nav-item me-3 d-flex align-items-center">
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" id="timezoneToggle">
-                        <label class="form-check-label" for="timezoneToggle">Local Time</label>
-                    </div>
-                </div>
-                <div class="nav-item me-3">
-                    <a href="#" id="themeToggleBtn" class="nav-link px-0" title="Toggle Theme" data-bs-toggle="tooltip" data-bs-placement="bottom">
-                        <i class="ti ti-moon"></i>
-                    </a>
-                </div>
-                <div class="nav-item me-3">
-                     <a href="#" id="logoutBtn" class="nav-link px-0" title="Logout" data-bs-toggle="tooltip" data-bs-placement="bottom">
-                        <i class="ti ti-logout"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
     </header>
-
     <div class="page-wrapper">
       <!-- Page header -->
       <div class="page-header d-print-none">
         <div class="container-xl">
           <div class="row g-2 align-items-center">
             <div class="col">
-              <h2 class="page-title">
-                Command Center
+              <h2 class="page-title" id="pageTitle">
+                Loading...
               </h2>
             </div>
           </div>
@@ -145,21 +150,67 @@
       </div>
       <!-- Page body -->
       <div class="page-body">
-        <div id="view-content" class="container-xl">
-          <!-- View-specific content will be injected here by the router -->
+        <div id="view-container" class="container-xl">
+          <!-- Content will be loaded here -->
+          <div class="empty">
+            <div class="empty-icon">
+              <div class="spinner-border" role="status"></div>
+            </div>
+            <p class="empty-title">Loading...</p>
+            <p class="empty-subtitle text-muted">
+              Please wait while the dashboard loads.
+            </p>
+          </div>
         </div>
       </div>
+      <footer class="footer footer-transparent d-print-none">
+        <div class="container-xl">
+          <div class="row text-center align-items-center flex-row-reverse">
+            <div class="col-lg-auto ms-lg-auto">
+              <ul class="list-inline list-inline-dots mb-0">
+                <li class="list-inline-item"><a href="https://magensec.short.gy/arm64msi" target="_blank" class="link-secondary" rel="noopener">Download (ARM64)</a></li>
+                <li class="list-inline-item"><a href="https://magensec.short.gy/x64msi" target="_blank" class="link-secondary" rel="noopener">Download (x64)</a></li>
+              </ul>
+            </div>
+            <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+              <ul class="list-inline list-inline-dots mb-0">
+                <li class="list-inline-item">
+                  Copyright &copy; 2025
+                  <a href="." class="link-secondary">MagenSec</a>.
+                  All rights reserved.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </div>
+  <!-- Libs JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/js/tabler.min.js"></script>
 
-  <!-- Tabler Core JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/js/tabler.min.js" defer></script>
-  
-  <!-- Core Application Logic -->
-  <script src="./js/timeUtils.js"></script>
-  <script src="./js/themeSwitcher.js"></script>
-  <script src="./js/uiUtils.js"></script>
-  <script src="./js/dataService.js"></script>
-  <script type="module" src="./js/app.js"></script>
-  </body>
+  <!-- Custom App Logic -->
+  <script src="js/dataService.js"></script>
+  <script src="js/router.js"></script>
+  <script src="js/timeUtils.js"></script>
+  <script src="js/uiUtils.js"></script>
+  <script src="js/orgSwitcher.js"></script>
+  <script src="js/themeSwitcher.js"></script>
+  <script src="js/deviceFilter.js"></script>
+  <script src="./js/kpiCards.js"></script>
+  <script src="./js/charting.js"></script>
+
+  <!-- View Initializers -->
+  <script src="./js/dashboardView.js"></script>
+  <script src="./js/appsView.js"></script>
+  <script src="./js/deviceView.js"></script>
+  <script src="./js/perfView.js"></script>
+  <script src="./js/installsView.js"></script>
+  <script src="./js/securityView.js"></script>
+  <script src="./js/reportsView.js"></script>
+
+  <!-- Main App -->
+  <script src="./js/app.js"></script>
+
+</body>
 </html>
