--- a/diag/admin/login.html
+++ b/diag/admin/login.html
@@ -4,20 +4,66 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Login - MagenSec</title>
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚡</text></svg>">
+  
+  <!-- Tabler Core CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/css/tabler.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css" />
+
+  <style>
+    body {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .login-card {
+      width: 100%;
+      max-width: 400px;
+    }
+  </style>
 </head>
-<body>
-  <div class="login-container">
-    <h2>Admin Dashboard Login</h2>
-    <form id="loginForm">
-      <label for="username">Username/Org:</label>
-      <input type="text" id="username" required autofocus>
-      <label for="password">Password:</label>
-      <input type="password" id="password" required>
-      <button type="submit">Login</button>
-      <div id="loginError" class="error"></div>
-    </form>
+<body class="d-flex flex-column">
+  <div class="page page-center">
+    <div class="container container-tight py-4">
+      <div class="text-center mb-4">
+        <span style="font-size: 3rem;">🛡️</span>
+        <h1 class="h2 text-white">MagenSec</h1>
+        <p class="text-white-50">Command Center Login</p>
+      </div>
+      <div class="card card-md login-card">
+        <div class="card-body">
+          <h2 class="h2 text-center mb-4">Sign in to your account</h2>
+          <form id="loginForm" autocomplete="off" novalidate="">
+            <div class="mb-3">
+              <label class="form-label" for="username">Username/Organization</label>
+              <input type="text" class="form-control" id="username" placeholder="Enter username" autocomplete="username" required autofocus>
+            </div>
+            <div class="mb-2">
+              <label class="form-label" for="password">
+                Password
+              </label>
+              <input type="password" class="form-control" id="password" placeholder="Enter password" autocomplete="current-password" required>
+            </div>
+            <div id="loginError" class="alert alert-danger d-none" role="alert"></div>
+            <div class="form-footer">
+              <button type="submit" class="btn btn-primary w-100">
+                <i class="ti ti-login me-2"></i>
+                Sign in
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="text-center text-white-50 mt-3">
+        <small>Access your security command center</small>
+      </div>
+    </div>
   </div>
+  
+  <!-- Tabler Core JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.3.2/dist/js/tabler.min.js"></script>
   <script src="js/auth.js"></script>
 </body>
 </html>
