--- a/FixIt.html
+++ b/FixIt.html
@@ -247,7 +247,10 @@
             <div class="container-xl">
                 <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
                     <a href="index.html" class="text-decoration-none">
-                        <img src="assets/logo.png" alt="MagenSec" class="navbar-brand-image">
+                        <picture>
+                            <source srcset="assets/logo.webp" type="image/webp">
+                            <img src="assets/logo.png" alt="MagenSec" class="navbar-brand-image">
+                        </picture>
                         MagenSec
                     </a>
                 </h1>
