--- a/about.html
+++ b/about.html
@@ -8,7 +8,23 @@
     <meta name="description" content="Learn about MagenSec's mission to make enterprise-grade cybersecurity accessible to everyone. Discover our approach to threat detection and vulnerability management."/>
     
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="About MagenSec | Advanced Cybersecurity Solutions"/>
+                                                                           <div class="d-flex align-items-center mb-3">
+                                    <picture>
+                                        <source srcset="assets/silver_shield.webp" type="image/webp">
+                                        <img src="assets/silver_shield.png" alt="Compliance" class="shield-icon me-3" style="width: 40px; height: 40px;">
+                                    </picture>                <div class="d-flex align-items-center mb-3">
+                                    <picture>
+                                        <source srcset="assets/black_shield.webp" type="image/webp">
+                                        <img src="assets/black_shield.png" alt="Hardening" class="shield-icon me-3" style="width: 40px; height: 40px;">
+                                    </picture>                <div class="d-flex align-items-center mb-3">
+                                    <picture>
+                                        <source srcset="assets/red_shield.webp" type="image/webp">
+                                        <img src="assets/red_shield.png" alt="Prevention" class="shield-icon me-3" style="width: 40px; height: 40px;">
+                                    </picture>                <div class="d-flex align-items-center mb-3">
+                                    <picture>
+                                        <source srcset="assets/green_shield.webp" type="image/webp">
+                                        <img src="assets/green_shield.png" alt="Detection" class="shield-icon me-3" style="width: 40px; height: 40px;">
+                                    </picture> <meta property="og:title" content="About MagenSec | Advanced Cybersecurity Solutions"/>
     <meta property="og:description" content="Learn about MagenSec's mission to make enterprise-grade cybersecurity accessible to everyone. Discover our approach to threat detection and vulnerability management."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://magensec.gigabits.co.in/about.html"/>
@@ -238,7 +254,10 @@
             <div class="container-xl">
                 <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
                     <a href="index.html" class="text-decoration-none">
-                        <img src="assets/logo.png" alt="MagenSec" class="navbar-brand-image">
+                        <picture>
+                            <source srcset="assets/logo.webp" type="image/webp">
+                            <img src="assets/logo.png" alt="MagenSec" class="navbar-brand-image">
+                        </picture>
                         MagenSec
                     </a>
                 </h1>
@@ -588,7 +607,10 @@
                     </div>
                     
                     <div class="col-lg-6 text-center">
-                        <img src="assets/GoldShield.webp" alt="MagenSec Protection" class="img-fluid" style="max-width: 400px;">
+                        <picture>
+                            <source srcset="assets/GoldShield.webp" type="image/webp">
+                            <img src="assets/gold_shield.png" alt="MagenSec Protection" class="img-fluid" style="max-width: 400px;">
+                        </picture>
                     </div>
                 </div>
             </div>
