Another try to fix CORS

--- a/mscc/login.html
+++ b/mscc/login.html
@@ -427,7 +427,7 @@
                 console.log('Resolved API Base:', apiBase);
                 
                 // Use the OAuth endpoint we configured in Cloud API
-                const callbackUrl = `${apiBase}/oauth/callback`;
+                const callbackUrl = `${apiBase}/api/oauth/callback`;
                 console.log('Calling OAuth callback URL:', callbackUrl);
                 
                 // Create a form to bypass CORS issues
