added missing script files.

--- a/portal/index.html
+++ b/portal/index.html
@@ -26,7 +26,7 @@
     <div id="auth-container" class="hidden min-h-screen flex items-center justify-center bg-gradient-to-br from-blue-50 to-indigo-100">
         <div class="max-w-md w-full space-y-8 p-8 bg-white rounded-xl shadow-lg">
             <div class="text-center">
-                <img src="../images/logo.png" alt="MagenSec" class="mx-auto h-12 w-auto">
+                <img src="/assets/logo.png" alt="MagenSec" class="mx-auto h-12 w-auto">
                 <h2 class="mt-6 text-3xl font-extrabold text-gray-900">Welcome to MagenSec Hub</h2>
                 <p class="mt-2 text-sm text-gray-600">Enterprise Security Management Platform</p>
             </div>
@@ -44,7 +44,7 @@
             <div class="max-w-full mx-auto px-4">
                 <div class="flex justify-between h-16">
                     <div class="flex items-center">
-                        <img src="../images/logo.png" alt="MagenSec" class="h-8 w-auto">
+                        <img src="/assets/logo.png" alt="MagenSec" class="h-8 w-auto">
                         <span class="ml-3 text-xl font-bold text-gray-900">MagenSec Hub</span>
                     </div>
                     
