--- a/diag/admin/index.html
+++ b/diag/admin/index.html
@@ -135,6 +135,16 @@
                   </span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="organizations.html">
+                  <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="ti ti-building"></i>
+                  </span>
+                  <span class="nav-link-title">
+                    Organizations
+                  </span>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
