--- a/diag/admin/organizations.html
+++ b/diag/admin/organizations.html
@@ -365,8 +365,9 @@
         }
 
         function authenticate() {
-            // For now, redirect to the OAuth endpoint
-            window.location.href = `${API_BASE}/api/auth/oauth`;
+            // Include current page URL as return URL for OAuth flow
+            const returnUrl = encodeURIComponent(window.location.href);
+            window.location.href = `${API_BASE}/api/auth/oauth?returnUrl=${returnUrl}`;
         }
 
         function signOut() {
