--- a/portal/index.html
+++ b/portal/index.html
@@ -179,6 +179,14 @@
     <script src="assets/js/ui.js"></script>
     <script src="assets/js/app.js"></script>
     
+    <!-- Templates -->
+    <script src="assets/js/templates/template-utils.js"></script>
+    <script src="assets/js/templates/login-dialog.js"></script>
+    <script src="assets/js/templates/settings-templates.js"></script>
+    <script src="assets/js/templates/compliance-templates.js"></script>
+    <script src="assets/js/templates/reports-templates.js"></script>
+    <script src="assets/js/templates/profile-templates.js"></script>
+    
     <!-- Page Controllers -->
     <script src="assets/js/pages/dashboard.js"></script>
     <script src="assets/js/pages/threats.js"></script>
