docs(web): add License (EULA) section and TOC link; anchor #license for installer

--- a/terms.html
+++ b/terms.html
@@ -144,6 +144,7 @@
                                 <div class="card-body">
                                     <nav class="nav nav-pills flex-column">
                                         <a class="nav-link" href="#terms">Terms & Conditions</a>
+                                        <a class="nav-link" href="#license">License (EULA)</a>
                                         <a class="nav-link" href="#privacy">Privacy Policy</a>
                                         <a class="nav-link" href="#subscription">Subscription & Payment</a>
                                         <a class="nav-link" href="#refund">Refund Policy</a>
@@ -230,6 +231,67 @@
                                 will be posted on this page with an updated revision date. Continued use of the 
                                 software after changes are posted constitutes acceptance of the new terms.
                             </p>
+                        </section>
+
+                        <!-- End User License Agreement (EULA) -->
+                        <section id="license" class="policy-section section-anchor">
+                            <h2>End User License Agreement (EULA)</h2>
+                            <p class="lead">
+                                This End User License Agreement governs your use of Gigabits MagenSec software.
+                                By installing or using the software, you agree to the terms below.
+                            </p>
+
+                            <h3>1. License Grant</h3>
+                            <p>
+                                We grant you a non-exclusive, non-transferable license to install and use MagenSec on devices you own or control.
+                                <strong>Personal</strong> licenses are for an individual and family use. <strong>Business</strong> licenses are for organizational use per the purchased seats.
+                            </p>
+
+                            <h3>2. Permitted and Prohibited Uses</h3>
+                            <ul>
+                                <li>Permitted: Install, run, and update the software; create backups for recovery.</li>
+                                <li>Prohibited: Reverse engineering, decompiling, resale, sublicense, or circumvention of license controls.</li>
+                            </ul>
+
+                            <h3>3. Data Handling and Storage Location</h3>
+                            <p>
+                                Diagnostic and operational metadata may be transmitted to our cloud services solely to provide features like licensing, updates, and telemetry.
+                                Data may be processed and stored in the <strong>United States</strong> and other regions as described in our Privacy Policy.
+                                We implement encryption and access controls; see the Privacy section for details.
+                            </p>
+
+                            <h3>4. GDPR and International Users</h3>
+                            <p>
+                                If you are located in the EU/EEA or other regions with data protection laws, you have rights to access, rectify, or delete personal data as applicable.
+                                Contact <a href="mailto:magensec@gigabits.co.in">magensec@gigabits.co.in</a> to exercise your rights.
+                            </p>
+
+                            <h3>5. Updates and Changes</h3>
+                            <p>
+                                The software may install updates automatically to improve security and functionality. Major changes to terms or privacy practices will be posted on this page.
+                            </p>
+
+                            <h3>6. Disclaimer of Warranties</h3>
+                            <p>
+                                The software is provided <em>“as is”</em> without warranties of any kind, express or implied, including merchantability, fitness for a particular purpose, or non-infringement.
+                            </p>
+
+                            <h3>7. Limitation of Liability</h3>
+                            <p>
+                                To the maximum extent permitted by law, Gigabits shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising from use of the software.
+                            </p>
+
+                            <h3>8. Termination</h3>
+                            <p>
+                                We may terminate your license if you materially breach these terms. Upon termination, you must uninstall and cease all use of the software.
+                            </p>
+
+                            <h3>9. Governing Law</h3>
+                            <p>
+                                These terms are governed by applicable laws of the jurisdiction of the Gigabits operating entity. Disputes shall be resolved in the competent courts of that jurisdiction.
+                            </p>
+
+                            <p class="text-muted mt-4">Last updated: November 4, 2025</p>
                         </section>
 
                         <!-- Privacy Policy -->
