--- a/portal/index.html
+++ b/portal/index.html
@@ -27,13 +27,12 @@
         
         @keyframes spin {
             to { transform: rotate(360deg); }
-        }
     </style>
 </head>
 <body class="bg-gray-50">
     <!-- Main App Container -->
-    <div id="app"></div>
-        <!-- Initial loading state -->
+    <div id="app">
+        <!-- Initial loading state (will be replaced by React) -->
         <div class="min-h-screen flex items-center justify-center">
             <div class="text-center">
                 <div class="spinner mx-auto mb-4"></div>
