--- a/about.html
+++ b/about.html
@@ -495,7 +495,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="plyr__video-embed" id="about-video-player">
-                                                        <iframe src="https://www.youtube.com/embed/8z1vNSBEelQ?origin=https://magensec.gigabits.co.in&amp;iv_load_policy=3&amp;modestbranding=1&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1&amp;disablekb=1&amp;fs=1&amp;hl=en" allowfullscreen allowtransparency title="Cyber Attack Timeline - Why Every Minute Counts" sandbox="allow-scripts allow-same-origin allow-presentation" loading="lazy"></iframe>
+                                                        <iframe src="" data-video-id="8z1vNSBEelQ" allowfullscreen allowtransparency title="Cyber Attack Timeline - Why Every Minute Counts" sandbox="allow-scripts allow-same-origin allow-presentation allow-popups" loading="lazy"></iframe>
                                                     </div>
                                                 </div>
                                             </div>
@@ -730,6 +730,14 @@
                 
                 if (playerElement && !players[videoId]) {
                     try {
+                        // Set dynamic iframe src with correct origin for localhost/production
+                        const iframe = playerElement.querySelector('iframe[data-video-id]');
+                        if (iframe && !iframe.src) {
+                            const videoIdFromData = iframe.getAttribute('data-video-id');
+                            const origin = window.location.origin;
+                            iframe.src = `https://www.youtube.com/embed/${videoIdFromData}?origin=${encodeURIComponent(origin)}&iv_load_policy=3&modestbranding=1&playsinline=1&showinfo=0&rel=0&enablejsapi=1&disablekb=1&fs=1&hl=en`;
+                        }
+                        
                         players[videoId] = new Plyr(playerElement, {
                             controls: ['play-large', 'play', 'progress', 'current-time', 'duration', 'mute', 'volume', 'fullscreen'],
                             youtube: {
