Device page update

--- a/portal/index.html
+++ b/portal/index.html
@@ -278,7 +278,9 @@
                     loadModule('./js/orgContext.js'),
                     loadModule('./js/router.js'),
                     loadModule('./js/utils/constants.js'),
-                    loadModule('./js/utils/manifestCache.js')
+                    loadModule('./js/utils/manifestCache.js'),
+                    loadModule('./js/toast.js'),
+                    loadModule('./js/utils/piiDecryption.js')
                 ]);
                 
                 // Load components in parallel
