--- a/portal/index.html
+++ b/portal/index.html
@@ -169,6 +169,9 @@
                                     <a class="dropdown-item" href="#!/settings">
                                         <span class="me-2">⚙️</span>Settings
                                     </a>
+                                    <a class="dropdown-item" href="#!/audit">
+                                        <span class="me-2">📋</span>Audit Events
+                                    </a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#!/inventory">Inventory</a>
                                     <a class="dropdown-item" href="#!/trends">Trends</a>
