--- a/portal/index.html
+++ b/portal/index.html
@@ -50,6 +50,18 @@
             padding: 0;
         }
         
+        /* JSON metadata viewer - dark theme with proper contrast */
+        .json-metadata {
+            background: #1e1e1e !important;
+            color: #d4d4d4 !important;
+            border: 1px solid #3e3e3e !important;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 0.875rem;
+            overflow-x: auto;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
+        
         /* Login overlay - full-page pattern like Tabler sign-in */
         #login-overlay {
             display: none;
